--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
     <main class="flex-grow-1">
       <section
         id="about"
-        class="d-flex align-items-center justify-content-center text-center vh-100 bg-about"
+        class="contens d-flex align-items-center justify-content-center text-center vh-100 bg-about"
       >
         <div class="container">
           <h2>The Coolest cat in the crypto alley</h2>
@@ -36,7 +36,7 @@
 
       <section
         id="tokenomics"
-        class="d-flex align-items-center justify-content-center text-center vh-100 bg-tokenomics"
+        class="contens d-flex align-items-center justify-content-center text-center vh-100 bg-tokenomics"
       >
         <div class="container">
           <h2 class="mb-4 text-whitesmoke">Tokenomics</h2>
@@ -59,7 +59,7 @@
 
       <section
         id="roadmap"
-        class="align-items-center justify-content-center text-center vh-300 bg-roadmap"
+        class="contens justify-content-center text-center vh-300 bg-roadmap"
       >
         <div class="container">
           <br />
@@ -108,7 +108,7 @@
 
       <section
         id="social-media"
-        class="d-flex align-items-center justify-content-center text-center vh-100 bg-social-media"
+        class="contens d-flex align-items-center justify-content-center text-center vh-100 bg-social-media"
       >
         <div class="container">
           <h2 class="mb-4 text-whitesmoke">Social Media</h2>
