--- a/index.html
+++ b/index.html
@@ -68,11 +68,10 @@
             <div class="col-md-6 mb-4">
               <div class="timeline-content bg-light p-4">
                 <h4>Q2 2024</h4>
-                <p>Listing Raydium</p>
-                <p>X Blue Check</p>
-                <p>CMC Listing</p>
-                <p>Coingecko Listing</p>
-                <p>Partnership with 10 big influencers</p>
+                <p>Build sosial media</p>
+                <p>Build Website</p>
+                <p>X blue check (paid)</p>
+                <p>Listing raydium</p>
                 <p>Burn 2% of dev wallet</p>
               </div>
             </div>
@@ -82,9 +81,7 @@
                 <p>Merchandise Smoking Cat</p>
                 <p>Short Movie Smoking Cat</p>
                 <p>Partnership with Gaming Project</p>
-                <p>100m Market Capital</p>
-                <p>Partnership with 20 Big Influencers</p>
-                <p>More Marketing</p>
+                <p>More marketing</p>
                 <p>Burn 2% of Dev Wallet</p>
               </div>
             </div>
@@ -93,13 +90,17 @@
             <div class="col-md-6 mb-4">
               <div class="timeline-content bg-light p-4">
                 <h4>Q4 2024</h4>
-                <p>Partnerships with Influencers</p>
+                <p>Build Gaming project (beta testing)</p>
+                <p>More marketing</p>
+                <p>Sell marchendise smoking cat</p>
               </div>
             </div>
             <div class="col-md-6 mb-4">
               <div class="timeline-content bg-light p-4">
                 <h4>Q1 2025</h4>
-                <p>Merchandise Smoking Cat</p>
+                <p>More Partnership</p>
+                <p>More marketing</p>
+                <p>Exchange Listing</p>
               </div>
             </div>
           </div>
