Update index.html logo

--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
       rel="stylesheet"
     />
     <link rel="stylesheet" href="css/style.css" />
+    <link rel="icon" href="img/logo.jpeg" type="image/x-icon" />
   </head>
   <body class="d-flex flex-column">
     <header
