--- a/index.html
+++ b/index.html
@@ -10,6 +10,21 @@
     />
     <link rel="stylesheet" href="css/style.css" />
     <link rel="icon" href="img/logo.jpeg" type="image/x-icon" />
+     <meta property="og:title" content="Smoking Cat Meme Coin" />
+    <meta
+      property="og:description"
+      content="The Coolest cat in the crypto alley"
+    />
+    <meta
+      property="og:image"
+      content="https://smokingcar.github.io/smokingcat/img/logo.jpeg"
+    />
+    <meta
+      property="og:url"
+      content="https://smokingcar.github.io/smokingcat/"
+    />
+    <meta property="og:type" content="website" />
+
   </head>
   <body class="d-flex flex-column">
     <header
