--- a/index.html
+++ b/index.html
@@ -10,7 +10,8 @@
     />
     <link rel="stylesheet" href="css/style.css" />
     <link rel="icon" href="img/logo.jpeg" type="image/x-icon" />
-     <meta property="og:title" content="Smoking Cat Meme Coin" />
+
+    <meta property="og:title" content="Smoking Cat Meme Coin" />
     <meta
       property="og:description"
       content="The Coolest cat in the crypto alley"
@@ -24,7 +25,6 @@
       content="https://smokingcar.github.io/smokingcat/"
     />
     <meta property="og:type" content="website" />
-
   </head>
   <body class="d-flex flex-column">
     <header
@@ -60,13 +60,13 @@
             <div class="col-md-6 mb-4">
               <div class="p-4 bg-light rounded">
                 <h4>Dev Wallet</h4>
-                <p>8% (for burn, marketing, etc)</p>
+                <p>12% (for burn, marketing, etc)</p>
               </div>
             </div>
             <div class="col-md-6 mb-4">
               <div class="p-4 bg-light rounded">
                 <h4>Liquidity</h4>
-                <p>92% of total supply</p>
+                <p>88% of total supply</p>
               </div>
             </div>
           </div>
@@ -84,10 +84,13 @@
             <div class="col-md-6 mb-4">
               <div class="timeline-content bg-light p-4">
                 <h4>Q2 2024</h4>
-                <p>Build sosial media</p>
-                <p>Build Website</p>
-                <p>X blue check (paid)</p>
-                <p>Listing raydium</p>
+                <p>Build sosial media &#9989;</p>
+                <p>Build Website &#9989;</p>
+                <p>X Blue Check (paid)</p>
+                <p>Listing Raydium</p>
+                <p>Cmc listing</p>
+                <p>Coingecko listing</p>
+                <p>Partnership with 10 big influencer</p>
                 <p>Burn 2% of dev wallet</p>
               </div>
             </div>
@@ -97,7 +100,8 @@
                 <p>Merchandise Smoking Cat</p>
                 <p>Short Movie Smoking Cat</p>
                 <p>Partnership with Gaming Project</p>
-                <p>More marketing</p>
+                <p>Partnership with 20 big influencer</p>
+                <p>Exchange Listing</p>
                 <p>Burn 2% of Dev Wallet</p>
               </div>
             </div>
@@ -116,7 +120,8 @@
                 <h4>Q1 2025</h4>
                 <p>More Partnership</p>
                 <p>More marketing</p>
-                <p>Exchange Listing</p>
+                <p>Game Release</p>
+                <p>Burn 1% of dev wallet</p>
               </div>
             </div>
           </div>
