Update index.html tomy

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <link rel="stylesheet" href="css/style.css" />
     <link rel="icon" href="img/logo.jpeg" type="image/x-icon" />
 
-    <meta property="og:title" content="Smoking Cat Meme Coin" />
+    <meta property="og:title" content="Tomy The Smoking Cat Meme Coin" />
     <meta
       property="og:description"
       content="The Coolest cat in the crypto alley"
@@ -155,7 +155,7 @@
     </main>
 
     <footer class="footerbg text-white text-center py-5">
-      <p>&copy; 2024 Smoking Cat Meme Coin. All Rights Reserved.</p>
+      <p>&copy; 2024 Tomy The Smoking Cat Meme Coin. All Rights Reserved.</p>
     </footer>
 
     <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"></script>
