--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
           <p></p>
           <img src="img/logo.jpeg" class="rounded-circle" alt="Logo" />
           <br /><br />
-          <p class="address">CA : qwiuyeqwueyquiyiquw</p>
+<!--           <p class="address">CA : qwiuyeqwueyquiyiquw</p> -->
         </div>
       </section>
 
