--- a/index.html
+++ b/index.html
@@ -42,7 +42,8 @@
         class="contens d-flex align-items-center justify-content-center text-center vh-100 bg-about"
       >
         <div class="container">
-          <h2>The Coolest cat in the crypto alley</h2>
+          <h1>TOMY IS</h1>
+          <h3>The Coolest cat in the crypto alley</h3>
           <p></p>
           <img src="img/logo.jpeg" class="rounded-circle" alt="Logo" />
           <br /><br />
