--- a/index.html
+++ b/index.html
@@ -58,18 +58,18 @@
         <div class="container">
           <h2 class="mb-4 text-whitesmoke">Tokenomics</h2>
           <div class="row">
-            <div class="col-md-6 mb-4">
+            <div class="col-md-12 mb-4">
               <div class="p-4 bg-light rounded">
-                <h4>Dev Wallet</h4>
-                <p>12% (for burn, marketing, etc)</p>
+                <h4>100% LP Burn</h4>
+                <p></p>
               </div>
             </div>
-            <div class="col-md-6 mb-4">
+            <!-- <div class="col-md-6 mb-4">
               <div class="p-4 bg-light rounded">
                 <h4>Liquidity</h4>
                 <p>88% of total supply</p>
               </div>
-            </div>
+            </div> -->
           </div>
         </div>
       </section>
@@ -92,7 +92,6 @@
                 <p>Cmc listing</p>
                 <p>Coingecko listing</p>
                 <p>Partnership with 10 big influencer</p>
-                <p>Burn 2% of dev wallet</p>
               </div>
             </div>
             <div class="col-md-6 mb-4">
@@ -102,8 +101,8 @@
                 <p>Short Movie Smoking Cat</p>
                 <p>Partnership with Gaming Project</p>
                 <p>Partnership with 20 big influencer</p>
+                <p>More Marketing</p>
                 <p>Exchange Listing</p>
-                <p>Burn 2% of Dev Wallet</p>
               </div>
             </div>
           </div>
@@ -112,17 +111,18 @@
               <div class="timeline-content bg-light p-4">
                 <h4>Q4 2024</h4>
                 <p>Build Gaming project (beta testing)</p>
-                <p>More marketing</p>
-                <p>Sell marchendise smoking cat</p>
+                <p>More Marketing</p>
+                <p>More Exchange Listing</p>
+                <p>Sell Marchendise Smoking Cat</p>
               </div>
             </div>
             <div class="col-md-6 mb-4">
               <div class="timeline-content bg-light p-4">
                 <h4>Q1 2025</h4>
                 <p>More Partnership</p>
-                <p>More marketing</p>
+                <p>More Marketing</p>
+                <p>More Exchange Listing</p>
                 <p>Game Release</p>
-                <p>Burn 1% of dev wallet</p>
               </div>
             </div>
           </div>
