--- a/index.html
+++ b/index.html
@@ -18,11 +18,11 @@
     />
     <meta
       property="og:image"
-      content="https://smokingcar.github.io/smokingcat/img/logo.jpeg"
+      content="https://smokingcat.site/img/logo.jpeg"
     />
     <meta
       property="og:url"
-      content="https://smokingcar.github.io/smokingcat/"
+      content="https://smokingcat.site/"
     />
     <meta property="og:type" content="website" />
   </head>
